Revision history for Perl extension PGXN::API

0.16.2

0.16.1  2012-01-10T04:30:02Z
      - Added `version_string` class method to PGXN::API. It should always be
        used for displaying the version.
      - Added `Capfile` for capistrano deployment.
      - Added `eg/debian_init`, an example init script for Debian that runs
        PGXN::API on Starman.
      - Added `eg/pgxn_sync`, an example shell script that syncs from a local
        master mirror.

0.16.0  2011-08-26T17:29:00Z
      - Eliminated "Use of uninitialized value in subroutine entry" warning
        when indexing a user with no associated URI.
      - If an version of an extension is deleted from the mirror extension
        JSON file, it will now also be deleted from the API doc root's
        extension JSON file (Issue #8).
      - Requiring Text::Markup 0.13, as it has an important fix for parsing
        Pod.
      - Upgraded from KinoSearch to Lucy.

0.15.0  2011-05-12T18:40:43
      - Changed the JSONP callback parameter from "jsonp" to "callback".

0.14.1  2011-05-12T18:11:02
      - Changed mentions of `pgxn_apid` to the correct `pgxn_api_server` in
        `pgxn_api_server` docs.
      - Backported to support Perl 5.10.

0.14.0  2011-05-03T00:09:13
      - Now require Plack 0.9977 to enable JSONP for all JSON file requests.
      - Fixed test failures on systems where `rsync` is not in the path.
      - Replaced `pgxn_api.psgi` with `pgxn_api_server`. The latter uses
        proper command-line processing and includes all of the functionality
        of `plackup`.

0.13.0  2011-04-30T20:40:21
      - The "name" and "user_name" fields are now full-text indexed in the
        "docs", "dists", and "extensions" indexes. This will allow a search
        such as `user:theory` to return results.

0.12.9  2011-04-30T20:01:29
      - Fixed a test failure in `t/indexer.t` on case-sensitive file systems.
      - Removed use of `env perl` in the `t/bin/testrscync` script. Just use